# iqa-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  IQA_Planning_Fusion.md  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  tâche_s1_s2.md
.dvc/: config
.github/workflows/: ci.yml
airflow/dags/: iqa_container_tracer.py  iqa_drift_piece_a_p4.py  iqa_drift_sensor.py  iqa_dvc_reproducibility.py  iqa_ingestion.py  iqa_lifecycle.py  iqa_lifecycle_trigger.py  iqa_monitoring.py  iqa_replay.py  iqa_retrain_sensor.py  iqa_rollback.py  iqa_rollback_sensor.py
configs/: demo_warmstart_checkpoints.yaml  drift_proxy_calibration.yaml  feature_ae_reconstruction_calibration.yaml  monitoring_thresholds.yaml  paths.yaml  promotion_gates.yaml  replay_scenarios.yaml  retrain_policy.yaml  security_controls.yaml
data/metadata/: calibration_set_v001.csv  casting_flux_replay_plan_drift.csv  casting_flux_replay_plan_natural.csv  casting_flux_replay_plan_natural_train_v004.csv  casting_flux_replay_plan_natural_v002.csv  casting_flux_replay_plan_natural_v003.csv  casting_flux_replay_plan_piece_b_full_v001.csv  casting_flux_replay_plan_piece_b_minimal_v001.csv  casting_piece_events.csv  (+6 more)
deploy/: demo-from-scratch.sh  docker-compose.demo-runtime.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.kong.yml  docker-compose.prod.yml  docker-compose.timezone.yml  docker-compose.yml  smoke-test.sh
docs/: Acces-SSH-Equipe-IQA.md  Architecture-Projet-IQA.md  CONTEXT.md  Cadrage-Projet-MLOps-IQA.md  Configuration-Serveur-IQA.md  Decisions-Questions-Ouvertes-IQA.md  Kick-Off Projets MLOPS (FR) - Liora.txt  MLflow-Registry.md  Modele-Feature-AE-IQA.md  Modele-Segmentation-ROI-IQA.md  PRD-IQA-MVP.md  ROADMAP-IQA-Convergence.md  Rapport-phase1-IQA-Missi.md  Rapport-phase2-IQA-Missi.md  Repartition-Taches-Phases-1-2.md  Reproductibilite-ML-IQA.md  Runbook-Phase1-IQA.md  acces-ssh-equipe-iqa.md  ai_security_governance.md  airflow-container-runtime-evidence.md  api-gateway.md  api_contracts.md  architecture-iqa.md  audit_trail.md  configuration-serveur-iqa.md  data-contracts.md  decisions-iqa.md  deploy_runbook.md  drift-regimes.md  drift_regimes.md  dvc-versioning.md  exploitation-runbook.md  feedback_rules.md  gates.md  index.md  lineage-evidence.md  mlflow-registry.md  model-lifecycle.md  modele-feature-ae-iqa.md  modele-segmentation-roi-iqa.md  (+17 more)
issues/: 00-registre-docker-hub-decision.md  01-extras-par-role-pyproject.md  02-dockerfile-multistage-image-api-slim.md  03-image-ml-inference-trainer.md  04-image-data-ingestion-replay-monitoring.md  05-factory-make-container-task.md  06-compose-socket-reseau-gpu-lock.md  07-dag-ingestion-conteneur.md  08-lifecycle-decision-dataset-conteneur.md  09-lifecycle-train-eval-conteneur.md  10-lifecycle-gates-mlflow-conteneur.md  11-lifecycle-promotion-reload-conteneur.md  12-dag-replay-conteneur.md  13-dag-monitoring-conteneur.md  14-ci-build-push-images-dockerhub.md  15-compose-dags-images-registre-par-tag.md  16-sensor-declenchement-evenementiel-lifecycle.md  17-overlays-compose-dev-prod.md  18-persistance-runtime-ingestion.md  19-persistance-runtime-dataset.md  20-runtime-train-eval-checkpoint.md  21-runtime-mlflow-registration.md  22-runtime-promotion-reload.md  23-runtime-monitoring-metrics-grafana.md  AIRFLOW_DAG_TESTS.md  README.md
issues_solved/: IQA1_KEN01-contrat-modele.md  IQA1_KEN05-predict-piece.md  IQA1_KEN08-registry-skeleton.md  IQA1_KEN09-dag-lifecycle-skeleton.md  IQA1_KEN10-tests-modele-registry.md  IQA2_KEN01-interface-feature-ae.md  IQA2_KEN03-train-feature-ae-versionne.md  IQA2_KEN06-mlflow-logging.md  IQA2_KEN09-promotion.md  IQA2_KEN10-rollback.md  IQA2_KEN11-dag-lifecycle-complet.md  IQA2_KEN14-model-loader.md  IQA2_KEN16-tests-promotion.md  IQA2_KEN17-documentation.md  README.md
notebooks/: README.md  phase2_to_phase3_transition.ipynb  phase3_lineage_evidence.ipynb
reports/: data_phase1_validation.md
scripts/: __init__.py  airflow_contracts.py  analyze_replay_classification.py  audit_gate_panel.py  backfill_feature_ae_runtime_contracts.py  backfill_observability_from_artifacts.py  bake_warmstart_checkpoints.py  build_casting_inventory.py  build_feature_ae_bootstrap.py  build_feature_ae_datasets.py  build_flux_plan.py  build_patchcore_domain_drift.py  build_piece_a_p4_drift_trigger_conf.py  build_replay_holdout_split.py  build_validation_gate_v2.py  calibrate_drift_proxy.py  calibrate_feature_ae_champion.py  calibrate_feature_ae_reconstruction.py  calibrate_feature_ae_reference.py  calibrate_feature_ae_thresholds.py  check_airflow_container_runtime.py  check_deploy_evidence.py  check_dvc_reproducibility.py  collect_lifecycle_signal.py  demo_fallback_lifecycle.py  demo_phase2.py  demo_reset.py  evaluate_feature_ae.py  evaluate_feature_ae_predictions.py  finalize_data_phase1.py  finalize_phase1_data_contracts.py  generate_bootstrap_roi.py  gpu_boundary.py  init_metadata_db.py  lineage_summary.py  materialize_manifest_images.py  predict_image.py  predict_roi.py  prepare_piece_b_full_scenario.py  prepare_piece_b_minimal_scenario.py  (+36 more)
tests/: conftest.py  factories.py  metadata_support.py  test_airflow_dags.py  test_api_skeleton.py  test_architecture_contract.py  test_candidate_builder.py  test_data_phase1_contract.py  test_decision_metrics.py  test_defect_coverage_gate.py  test_drift_baseline.py  test_evaluate_validation_set.py  test_feature_ae_candidate.py  test_feature_ae_candidate_versioned.py  test_feature_ae_champion_training.py  test_gpu_lock.py  test_ingestion_contract.py  test_iqa_lifecycle_dag.py  test_ml_security.py  test_ml_source_contract.py  test_mlflow_model_registration.py  test_mlflow_registry_contract.py  test_mlflow_run_logger.py  test_model_loader.py  test_model_registry_complete.py  test_model_wrappers.py  test_predict_image.py  test_predict_piece.py  test_promotion_gates.py  test_promotion_gates_contract.py  test_promotion_rollback_cycle.py  test_promotion_workflow.py  test_registry_skeleton.py  test_repo_init_contract.py  test_rollback_workflow.py  test_storage_contract.py
(+354 files in other folders)
