[project]
name = "iqa-mlops"
version = "0.1.0"
description = "Industrial Quality Assistant MLOps MVP"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "mlflow>=2.17",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "prometheus-client>=0.20",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.5",
    "torch>=2.1",
    "torchvision>=0.16",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
iqa-build-inventory = "scripts.build_inventory:main"
iqa-finalize-data-phase1 = "scripts.finalize_data_phase1:main"
iqa-build-flux-plan = "scripts.build_flux_plan:main"
iqa-build-feature-ae-datasets = "scripts.build_feature_ae_datasets:main"
iqa-simulate-lifecycle = "scripts.simulate_lifecycle:main"
iqa-prepare-sim-env = "scripts.prepare_sim_environment:main"
iqa-validate-mvp = "scripts.validate_mvp:main"
iqa-train-feature-ae = "scripts.train_feature_ae:main"
iqa-evaluate-feature-ae = "scripts.evaluate_feature_ae:main"
iqa-predict-image = "scripts.predict_image:main"
iqa-predict-roi = "scripts.predict_roi:main"
iqa-generate-bootstrap-roi = "scripts.generate_bootstrap_roi:main"
iqa-validate-ml-source = "scripts.validate_ml_source:main"
iqa-init-metadata-db = "scripts.init_metadata_db:main"
iqa-check-dvc-reproducibility = "scripts.check_dvc_reproducibility:main"
iqa-api = "scripts.run_api:main"
iqa-inference = "scripts.run_inference:main"
iqa-run-ingestion = "scripts.run_ingestion:main"
iqa-run-replay = "scripts.run_replay:main"
iqa-run-monitoring = "scripts.run_monitoring:main"
iqa-run-lifecycle = "scripts.run_lifecycle:main"
iqa-demo-phase2 = "scripts.demo_phase2:main"

[project.optional-dependencies]
app = [
    "streamlit>=1.40",
]
data = [
    "dvc[s3]>=3.55",
]
mlops = [
    "apache-airflow>=2.10",
]
cpu = ["torch>=2.1", "torchvision>=0.16"]
cu121 = ["torch>=2.1", "torchvision>=0.16"]
cu124 = ["torch>=2.1", "torchvision>=0.16"]
cu128 = ["torch>=2.1", "torchvision>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iqa", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: tests requiring CUDA",
    "slow: longer-running validation tests",
    "unit: pure unit tests, no external runtime required",
    "docker_contract: tests requiring a live Airflow runtime (Docker image); skipped locally",
    "postgres_contract: tests requiring a live PostgreSQL metadata database",
]

# ---------------------------------------------------------------------------
# uv - CPU/CUDA selection for torch / torchvision
#
# Usage:
#   uv sync --extra cu128       # RTX 3060 / CUDA 12.8 capable machines
#   uv sync --extra cu124       # CUDA 12.4 machines
#   uv sync --extra cu121       # CUDA 12.1 machines
#   uv sync --extra cpu         # local CPU-only or CI
#   uv run --extra cpu pytest -q
#
# Public commands are exposed through [project.scripts], for example:
#   uv run --extra cpu iqa-validate-mvp --help
# ---------------------------------------------------------------------------
[tool.uv]
conflicts = [[
    { extra = "cpu" },
    { extra = "cu121" },
    { extra = "cu124" },
    { extra = "cu128" },
]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
