[project]
name = "iqa-mlops"
version = "0.1.0"
description = "Industrial Quality Assistant MLOps MVP"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.8",
    "pillow>=10.0",
    # Config-driven boundaries (gates, monitoring thresholds) read YAML at runtime.
    "pyyaml>=6.0",
]

[project.scripts]
iqa-build-inventory = "scripts.build_inventory:main"
iqa-finalize-data-phase1 = "scripts.finalize_data_phase1:main"
iqa-build-flux-plan = "scripts.build_flux_plan:main"
iqa-build-feature-ae-datasets = "scripts.build_feature_ae_datasets:main"
iqa-build-feature-ae-bootstrap = "scripts.build_feature_ae_bootstrap:main"
iqa-calibrate-feature-ae-thresholds = "scripts.calibrate_feature_ae_thresholds:main"
iqa-simulate-lifecycle = "scripts.simulate_lifecycle:main"
iqa-prepare-sim-env = "scripts.prepare_sim_environment:main"
iqa-validate-mvp = "scripts.validate_mvp:main"
iqa-train-feature-ae = "scripts.train_feature_ae:main"
iqa-evaluate-feature-ae = "scripts.evaluate_feature_ae:main"
iqa-predict-image = "scripts.predict_image:main"
iqa-predict-roi = "scripts.predict_roi:main"
iqa-generate-bootstrap-roi = "scripts.generate_bootstrap_roi:main"
iqa-validate-ml-source = "scripts.validate_ml_source:main"
iqa-init-metadata-db = "scripts.init_metadata_db:main"
iqa-check-dvc-reproducibility = "scripts.check_dvc_reproducibility:main"
iqa-restore-model-artifacts = "scripts.restore_model_artifacts:main"
iqa-api = "scripts.run_api:main"
iqa-inference = "scripts.run_inference:main"
iqa-run-ingestion = "scripts.run_ingestion:main"
iqa-run-replay = "scripts.run_replay:main"
iqa-run-monitoring = "scripts.run_monitoring:main"
iqa-run-lifecycle = "scripts.run_lifecycle:main"
iqa-run-lifecycle-decision = "scripts.run_lifecycle_decision:main"
iqa-run-dataset = "scripts.run_dataset:main"
iqa-run-train = "scripts.run_train:main"
iqa-run-eval = "scripts.run_eval:main"
iqa-run-gates = "scripts.run_gates:main"
iqa-run-mlflow = "scripts.run_mlflow:main"
iqa-run-promotion = "scripts.run_promotion:main"
iqa-run-reload = "scripts.run_reload:main"
iqa-run-replay-lifecycle-cycle = "scripts.run_replay_lifecycle_cycle:main"
iqa-lineage-summary = "scripts.lineage_summary:main"
iqa-demo-phase2 = "scripts.demo_phase2:main"

[project.optional-dependencies]
serving = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2",
    "boto3>=1.34",
    "prometheus-client>=0.20",
]
ml = [
    "scikit-learn>=1.5",
    "mlflow>=2.17",
]
data = [
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "boto3>=1.34",
]
app = [
    "streamlit>=1.40",
]
dvc = [
    "dvc[s3]>=3.55",
]
mlops = [
    "apache-airflow>=2.10",
]
cpu = ["torch>=2.1", "torchvision>=0.16"]
cu121 = ["torch>=2.1", "torchvision>=0.16"]
cu124 = ["torch>=2.1", "torchvision>=0.16"]
cu128 = ["torch>=2.1", "torchvision>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iqa", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: tests requiring CUDA",
    "slow: longer-running validation tests",
    "unit: pure unit tests, no external runtime required",
    "docker_contract: tests requiring a live Airflow runtime (Docker image); skipped locally",
    "postgres_contract: tests requiring a live PostgreSQL metadata database",
]

# ---------------------------------------------------------------------------
# uv - extras by role + CPU/CUDA selection for torch / torchvision
#
# Role extras (ADR 0007 amendement):
#   --extra serving              # iqa-api (no torch)
#   --extra ml                   # scikit-learn, mlflow (no torch alone)
#   --extra data                 # ingestion, replay, monitoring (no torch)
#
# Torch index selectors (mutually exclusive):
#   --extra cpu                  # CPU-only torch
#   --extra cu128                # CUDA 12.8
#   --extra cu124                # CUDA 12.4
#   --extra cu121                # CUDA 12.1
#
# Docker images:
#   iqa-api:       --extra serving
#   iqa-inference: --extra serving --extra ml --extra cpu  (or cu*)
#   iqa-trainer:   --extra ml --extra cpu  (or cu*)
#   iqa-data:      --extra data
#
# Local dev (all roles):
#   uv sync --extra serving --extra ml --extra data --extra cpu
#   uv run --extra serving --extra ml --extra data --extra cpu pytest -q
# ---------------------------------------------------------------------------
[tool.uv]
conflicts = [[
    { extra = "cpu" },
    { extra = "cu121" },
    { extra = "cu124" },
    { extra = "cu128" },
]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
